@@ -1,5 +1,10 @@
 2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix makeBound call.
+	* tests/hs071.hh: Here.
+
+2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	* .gitignore,
 	* AUTHORS,
 	* COPYING,
